--- a/package.json
+++ b/package.json
@@ -12,9 +12,14 @@
     "react-scripts": "1.1.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set PORT=3006 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "proxy": {
+    "/api/login": {
+      "target": "http://localhost:3000"
+    }
   }
 }
