--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "eject": "react-scripts eject"
   },
   "proxy": {
-    "/api/login": {
+    "/api": {
       "target": "http://localhost:3000"
     }
   }
